# Adversarial-Attacks-Ethical-Safeguards-in-AI-Systems

./: .gitignore  README.md  pyproject.toml  requirements-cleverhans.txt  requirements.txt
adversarial_safeguards/: __init__.py  bundle.py  config.py  inference_pipeline.py
adversarial_safeguards/attacks/: __init__.py  pgd_fgsm.py
adversarial_safeguards/data/: __init__.py  cifar.py
adversarial_safeguards/defenses/: __init__.py  adversarial_training.py  distillation.py  input_transform.py
adversarial_safeguards/detection/: __init__.py  statistical.py
adversarial_safeguards/models/: __init__.py  cifar_cnn.py
adversarial_safeguards/monitoring/: __init__.py  gradcam.py  logger.py
adversarial_safeguards/risk/: __init__.py  framework.py
api/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  ReportView.jsx  styles.css
scripts/: generate_clean_ui_images.py  generate_ui_test_images.py  optional_cleverhans_pgd.py  run_attack_eval.py  train_adversarial.py  train_baseline.py  train_distillation.py
