[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-safeguards"
version = "0.1.0"
description = "Adversarial defenses, detection, monitoring, and ethical transparency for ML deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
